--- a/app.css
+++ b/app.css
@@ -15,19 +15,24 @@ body{
 }
 
 body{
-    max-width: 1000px;
-    max-height: 1000px;
+    max-width: 100vw;
+    height: 100vh;
     background-color:   #fff;
 }
 /*  */
 
+    .nav-bar{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: flex-start;
+        margin: 2em 5em 0;
+    }
+
     .logo{
-        position: absolute;
         width: 199px;
         height: 50px;
-        left: 90px;
-        top: 48px;
-        
         font-family: Quicksand;
         font-style: normal;
         font-weight: 500;
@@ -40,48 +45,36 @@ body{
 
     .github-link{
         /* Auto Layout */
-
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         justify-content: center;
         align-items: center;
-        padding: 0px;
-        
-        position: absolute;
-        width: 139px;
+        padding: 0; 
+        width: 120px;
         height: 60px;
-        left: 1170px;
-        top: 38px;
         
         background: #F1F1F1;
         border-radius: 8px;
     }
 
     .github-link i{
-        position: absolute;
-        top: 24px;
-        left: 20px;
+        margin-right: 1em;
     }
 
     .pt-sq2-texts{
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
-        padding: 0px;
+        padding: 0;
         
-        position: absolute;
-        width: 838px;
-        height: 233px;
-        left: 300px;
-        top: 244px;
+        justify-content: center;
+        align-items: center;
+        padding-top: 6em;
     }
 
     .pt-sq2-texts h1{
-        position: static;
         width: 838px;
         height: 104px;
-        left: 0px;
-        top: 0px;
+
         
         font-family: DM Sans;
         font-style: normal;
@@ -95,23 +88,18 @@ body{
         
         /* Inside Auto Layout */
         
-        flex: none;
-        order: 0;
-        flex-grow: 0;
-        margin: 12px 0px;
+        margin: 12px 0;
     }
 
     .pt-sq2-texts p{
-        position: static;
         width: 838px;
         height: 117px;
-        left: 0px;
-        top: 116px;
+
         
         font-family: Manrope;
         font-style: normal;
         font-weight: normal;
-        font-size: 24px;
+        font-size: 1.5em;
         line-height: 39px;
         /* or 162% */
         
@@ -121,16 +109,23 @@ body{
         color: #565656;
         
         /* Inside Auto Layout */
-        
-        flex: none;
-        order: 1;
-        flex-grow: 0;
-        margin: 12px 0px;
+        margin: 0.6em 0;
+    }
+
+    a{
+        color: #CB0202;
     }
 
     span{
-        color: rgb(172, 6, 6);
+        color: #CB0202;
         font-style: italic;
+    }
+
+    .buttons{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 1em;
     }
 
     button{
@@ -139,43 +134,22 @@ body{
         background-color: #000;
         color: #FFFF;
         cursor: pointer;
-    }
-    
+        margin-top: 1em;
 
-/* BUTTON MACOS */
-
-    .mac button{
-        position: absolute;
-        width: 320px;
+        width: 250px;
         height: 60px;
-        left: 560px;
-        top: 528px;
     }
 
-/* BUTTON WINDOWS */
-
-    .win button{
-        position: absolute;
-        width: 320px;
-        height: 60px;
-        left: 560px;
-        top: 613px;
-    }
-
-    /* ICONS */
-    
-    i{
+    button i{
         margin-right: 3em;
     }
 
 /* SMALL TEXT */
 
     .small-text{
-        position: absolute;
         width: 613px;
         height: 23px;
-        left: 413px;
-        bottom: 30px;
+        margin: 3em auto 0;
 
         font-family: 'Manrope';
         font-style: normal;
@@ -185,4 +159,71 @@ body{
         text-align: center;
 
         color: #000000;
+    }
+
+    @media screen and (max-width:768px) {
+
+        body{
+            min-width: 100vw;
+            height: 100vh;
+        }
+
+        .nav-bar{
+            margin: 2em .5em;
+            flex-wrap: nowrap;
+        }
+
+        .logo{
+            width: 139px;
+            height: 35px;
+
+            font-size: 35px;
+        }
+        .github-link{
+            width: 139px;
+            height: 60px;
+        }
+        
+        .pt-sq2-texts{
+            width: 384px;
+            height: 205px;
+            margin: 1em auto;
+        }
+
+        .pt-sq2-texts h1{
+            width: 371px;
+            height: 93px;
+
+            font-size: 24px;
+            line-height: 31px;
+        }
+
+        .pt-sq2-texts p{
+            width: 384px;
+            height: 104px;
+
+            font-size: 16px;
+            line-height: 26px;
+        }
+
+        .buttons{
+            /* width: 250px;
+            height: 132px; */
+            margin: 2em auto;
+        }
+
+        button{
+            width: 250px;
+            height: 40px;
+
+            font-size: 16px;
+        }
+
+        .small-text{
+            width: 268px;
+            height: 38px;
+            margin: 0 auto;
+
+            font-size: 14px;
+        }
     }
