--- a/landing_page/templates/home.html
+++ b/landing_page/templates/home.html
@@ -16,7 +16,6 @@
 
     <nav class="nav-bar">
         <div class="logo">pomodoro</div>
-        <div class="github-link"><i class="fa fa-github"></i> Github</div>
     </nav>
 
     <main class="pt-sq2-texts">
@@ -39,7 +38,7 @@
 
     <div class="small-text">
         <p>
-            For research purposes, I  would like to get your reviews. You can drop them <a href="devlulu.xyz">here</a>
+            Check out the github  <a href="https://github.com/LuluNwenyi/Pomodoro-Timer">here</a>
         </p>
     </div>
 </body>
