--- a/landing_page/templates/home.html
+++ b/landing_page/templates/home.html
@@ -32,7 +32,7 @@
     </main>
     
     <div class="buttons">
-        <a href={{ url_for('return_files') }} class="mac"><button><i class="fa fa-apple"></i>Download for MacOS</button></a>
+        <a href="{{ url_for('return_files') }}" class="mac"><button><i class="fa fa-apple"></i>Download for MacOS</button></a>
        
     </div>
 
